# noaises-local

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: build-py.md  build-py.ps1
.github/workflows/: build.yml
config/: personality.toml
packaging/: build.py  entry.py  noaises.spec
packaging/hooks/: hook-claude_agent_sdk.py
packaging/icons/: noaises.icns
packaging/macos/: create-dmg.sh
packaging/windows/: noaises.iss
src/noaises/: auth.py  config.py  logger.py  main.py  resources.py
src/noaises/agent/: core.py
src/noaises/interrupt/: controller.py
src/noaises/memory/: distiller.py  model.py  store.py  tools.py
src/noaises/personality/: distiller.py  engine.py
src/noaises/proxy/: server.py  translator.py
src/noaises/sessions/: engine.py
src/noaises/surface/: desktop.py
src/noaises/surface/web/: blob.lottie  index.html  persona.css  persona.js
src/noaises/tools/: camera_tool.py  screen_capture.py
src/noaises/vision/: camera.py  model.py  pipeline.py
src/noaises/voice/: pipeline.py  stt.py  tts.py
