[project]
name = "noaises-local"
version = "0.1.0"
description = "Noaises — Local-first, voice-first AI companion powered by Claude"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "claude-agent-sdk>=0.1.21",
    "anthropic>=0.52.0",
    "tomli-w>=1.0.0",
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.0",
    "numpy>=1.24.0",
    "azure-cognitiveservices-speech>=1.35.0",
    "pywebview>=5.0.0",
    "mss>=9.0.0",
    "opencv-python>=4.8.0",
    "transformers>=4.51.0",
    "torch>=2.0.0",
    "accelerate>=0.27.0",
    "Pillow>=10.0.0",
    "einops>=0.7.0",
    "pyvips-binary>=1.0.0",
    "pyvips>=2.2.0",
    "tokenizers>=0.19.0",
]

[project.scripts]
noaises = "noaises.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noaises"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.1",
]
